# icom_icr6_tool

./: .gitignore  Changelog  Makefile  README.rst  TODO  conftest.py  icf.ksy  icf.pk  main.py  pyproject.toml  run_icom_icr6.py  run_icom_icr6_gui.py
docs/: Makefile  icf.ksy  mem.tags  print_icf.py
icom_icr6/: __init__.py  change_manager.py  coding.py  coding_test.py  config.py  consts.py  expimp.py  fixers.py  fixers_test.py  gui.py  gui_awchannlist.py  gui_bankchanlist.py  gui_chanlist.py  gui_dlg_clone.py  gui_dlg_dupl.py  gui_dlg_find.py  gui_genericlist.py  gui_model.py  gui_nb_awchannels.py  gui_nb_banks.py  gui_nb_channels.py  gui_nb_scan_edge.py  gui_nb_scan_links.py  gui_nb_settings.py  gui_scanedgeslist.py  gui_scanlinkslist.py  gui_widgets.py  ic_io.py  io.py  main.py  main_gui.py  model.py  model_support.py  model_test.py  radio_memory.py  radio_memory_test.py  reports.py  validators.py
icom_icr6/data/: default_france.icf  default_global.icf  default_global2.icf  default_japan.icf  default_usa.icf
icom_icr6/gui/: __init__.py  awchannels_list.py  awchannels_page.py  banks_channelslist.py  banks_page.py  channels_list.py  channels_page.py  control_page.py  dlg_clone.py  dlg_copy.py  dlg_find.py  dlg_import.py  dlg_reports.py  genericlist.py  gui.py  gui_awchannlist.py  gui_bankchanlist.py  gui_chanlist.py  gui_dlg_find.py  gui_genericlist.py  gui_model.py  gui_nb_awchannels.py  gui_nb_banks.py  gui_nb_channels.py  gui_nb_scan_edge.py  gui_nb_scan_links.py  gui_nb_settings.py  gui_scanedgeslist.py  gui_scanlinkslist.py  scanedges_list.py  scanedges_page.py  scanlinks_list.py  scanlinks_page.py  settings_page.py  stats_page.py  support.py  widgets.py
icom_icr6/model/: __init__.py  _support.py  _support_test.py  channels.py  channels_test.py  fmt.py  radio.py  radio_test.py  scan.py  scan_test.py  settings.py  settings_test.py  sorting.py
tests/: coding_test.py  fixers_test.py  radio_memory_test.py
tests/model/: channels_test.py  radio_test.py  scan_test.py  settings_test.py
